@@ -1,5 +1,8 @@
 # Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo/src/catalyst/Attic/ChangeLog,v 1.610 2006/04/25 15:21:37 wolf31o2 Exp $
+# $Header: /var/cvsroot/gentoo/src/catalyst/Attic/ChangeLog,v 1.611 2006/04/25 17:10:11 rocket Exp $
+
+  25 Apr 2006; Eric Edgar <rocket@gentoo.org> modules/catalyst_support.py:
+  change hash result format so .DIGESTS is generated correctly
 
   25 Apr 2006; Chris Gianelloni <wolf31o2@gentoo.org>
   modules/catalyst_support.py:
